--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.mainContainer{
+	padding: 10px;
+	background-color: #f5f5f5;
+}
+.testimonial{
+	padding: 10px;
+	background-color: white;
+	border: 1px solid black;
+	color: black;
+	margin-bottom: 10px
+}
+.author{
+	text-align: right;
+	font-style: italic;
+}
